# streak-strike

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/habits/: page.tsx
app/habits/[habitId]/: page.tsx
app/new/: page.tsx
components/: calendar-grid.tsx  color-picker.tsx  day-cell.tsx  day-rollover-sync.tsx  habit-card.tsx  habit-form.tsx  streak-summary.tsx
docs/: StreakStrike_product_prd.md  StreakStrike_technical_prd.md
docs/adrs/: adr_001_data_storage_strategy.md  adr_002_grace_window_locking.md  adr_003_streak_calculation.md  adr_004_time_handling_local_date_strategy.md  adr_005_day_rollover_state_sync.md  adr_006_habit_deletion_behaviour.md
hooks/: use-habit-calendar.ts  use-habits.ts
lib/app/: day-rollover-sync.ts
lib/bitset/: month-bitset.ts
lib/calendar/: month-grid.ts
lib/date/: local-date.ts
lib/db/: dexie.ts  habit-months-repo.ts  habit-service.ts  habits-repo.ts  stats-repo.ts
lib/grace/: day-state.ts
lib/streak/: streak-engine.ts
public/: manifest.webmanifest
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
store/: habits-store.ts
tests/: bitset.test.ts  current-streak.test.ts  day-rollover-sync.test.ts  day-state.test.ts  grace-locking.test.ts  habit-deletion.test.ts  habit-metrics.test.ts  habits-store.test.ts  local-date.test.ts  longest-streak.test.ts  month-length.test.ts
types/: day-state.ts  habit.ts  next-pwa.d.ts
