[package]
name = "streak-strike-desktop"
version = "0.1.0"
description = "StreakStrike desktop app"
authors = ["StreakStrike"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
